--- a/release-notes/release-notes.json
+++ b/release-notes/release-notes.json
@@ -1,5 +1,58 @@
 [
     {
+        "version": "5.16.0",
+        "title": "Fiddler Everywhere v5.16.0",
+        "date": "Sep 2, 2024",
+        "items": [
+            {
+                "type": "New",
+                "entries": [
+                    {
+                        "title": "Redesigned Timings view provides more detailed information for single or multiple selected sessions"
+                    },
+                    {
+                        "title": "Protobuf is now the default message inspector for gRPC sessions"
+                    },
+                    {
+                        "title": "A notification appears if a global proxy policy is applied to the preconfigured Fiddler browser for Chrome or Edge"
+                    },
+                    {
+                        "title": "The application status bar now shows the number of active session breakpoints"
+                    },
+                    {
+                        "title": "Added support for capturing traffic from Microsoft Edge WebView2 apps launched through Fiddler's terminal"
+                    }
+                ]
+            },
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Missing Hex inspector for SSE session messages"
+                    },
+                    {
+                        "title": "Some SSE sessions (like ChatGPT conversations) are not being captured correctly"
+                    },
+                    {
+                        "title": "An error occurs when closing WebSocket tunnels"
+                    },
+                    {
+                        "title": "Multiple dialogs are opened when certain keyboard shortcuts are used"
+                    },
+                    {
+                        "title": "The preconfigured browser crashes shortly after launch"
+                    },
+                    {
+                        "title": "Deleting a session stopped at a breakpoint does not resume its execution"
+                    },
+                    {
+                        "title": "Update third-party dependencies to mitigate security issues"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "5.15.1",
         "title": "Fiddler Everywhere v5.15.1",
         "date": "Aug 6, 2024",
