--- a/release-notes/release-notes.json
+++ b/release-notes/release-notes.json
@@ -1,5 +1,34 @@
 [
     {
+        "version": "5.17.0",
+        "title": "Fiddler Everywhere v5.17.0",
+        "date": "Sep 12, 2024",
+        "items": [
+            {
+                "type": "New",
+                "entries": [
+                    {
+                        "title": "Add notification when a timestamp is copied from the timeline"
+                    }
+                ]
+            },
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Session times in overview tab show inconsistent values for some measurements like HTTPS handshakes"
+                    },
+                    {
+                        "title": "Wrong settings tab opened from when missing Protobuf warning message is clicked on a gRPC session"
+                    },
+                    {
+                        "title": "Update third-party dependencies to mitigate security issues"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "5.16.0",
         "title": "Fiddler Everywhere v5.16.0",
         "date": "Sep 2, 2024",
