--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -8,10 +8,10 @@
                 "type": "New",
                 "entries": [
                     {
-                        "title": "Improve keyboard shortcuts for most used user flows"
+                        "title": "Redesigned keyboard shortcuts for most used user flows and new keyboard shortcuts dialog"
                     },
                     {
-                        "title": "Improved session sizes information display for better clarity and detail"
+                        "title": "Redesigned Sizes view provides more detailed information for single or multiple selected sessions"
                     }
                 ]
             },
@@ -19,19 +19,19 @@
                 "type": "Fixed",
                 "entries": [
                     {
-                        "title": "Unable to install on clean Windows machine when starting the installer from Downloads folder"
-                    },
-                    {
                         "title": "Moving the Session Selection in Live Traffic Grid should not require Enter"
                     },
                     {
-                        "title": "Add information im Messages Inspector that server-sent events over HTTP/1.1 cannot be displayed"
+                        "title": "Unable to install on clean Windows machine when starting the installer from Downloads folder"
                     },
                     {
-                        "title": "Show total sum in Timings Table"
+                        "title": "Add information in Messages inspector that server-sent events over HTTP/1.1 cannot be displayed"
                     },
                     {
-                        "title": "When session is deleted clear the content from Inspectors too"
+                        "title": "Show total sum in Timings table"
+                    },
+                    {
+                        "title": "When session is deleted clear the content from inspectors too"
                     },
                     {
                         "title": "Cannot scroll to the bottom of the Columns dropdown"
