--- a/release-notes/release-notes.json
+++ b/release-notes/release-notes.json
@@ -1,5 +1,34 @@
 [
     {
+        "version": "6.3.0",
+        "title": "Fiddler Everywhere v6.3.0",
+        "date": "March 18, 2025",
+        "items": [
+            {
+                "type": "New",
+                "entries": [
+                    {
+                        "title": "Decode content popup is now opened in a separate window"
+                    },
+                    {
+                        "title": "Added option for automatic Windows authentication including Kerberos and NTLM"
+                    },
+                    {
+                        "title": "Updated title bar UI"
+                    }
+                ]
+            },
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "Some headers may become hidden in the Composer tab when there are many values"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "6.2.0",
         "title": "Fiddler Everywhere v6.2.0",
         "date": "February 25, 2025",
