--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -1,26 +1,17 @@
 [
     {
-        "version": "6.4.0-insiders",
-        "title": "Fiddler Everywhere v6.4.0",
-        "date": "April 15, 2025",
+        "version": "6.5.0-insiders",
+        "title": "Fiddler Everywhere v6.5.0",
+        "date": "May 12, 2025",
         "items": [
             {
                 "type": "New",
                 "entries": [
                     {
-                        "title": "Add new tools menu with Advanced Replay, Decode Value and AutoSave features"
+                        "title": "Allow using custom CA certificates"
                     },
                     {
-                        "title": "Add support for AutoSave to automatically and periodically save live session data"
-                    },
-                    {
-                        "title": "Add menu option to trust Fiddler CA in the Windows Machine Certificate Store"
-                    },
-                    {
-                        "title": "Automatically enable HTTPS capturing after Fiddler CA certificate is trusted"
-                    },
-                    {
-                        "title": "Show a warning on macOS when enabling system proxy if Cisco AnyConnect VPN is running and add the VPN host to the bypass list"
+                        "title": "Add live or saved sessions to existing snapshots"
                     }
                 ]
             },
@@ -28,7 +19,13 @@
                 "type": "Fixed",
                 "entries": [
                     {
-                        "title": "Sessions used for automatic authentication are not marked as closed after they are done"
+                        "title": "HTTP 407 errors returned from Fiddler proxy when using some third party services like Zscaler"
+                    },
+                    {
+                        "title": "MessagePack request body not decoded"
+                    },
+                    {
+                        "title": "Update third-party dependencies to mitigate potential security vulnerabilities"
                     }
                 ]
             }
